--- a/jspy/index.html
+++ b/jspy/index.html
@@ -6,15 +6,12 @@
     <link rel="stylesheet" href="css/css.css">
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <py-env>
-        - pillow
-        - paths:
-          - /main.py
     </py-env>
 </head>
 <body>
 
     <py-script class="ps">
-        import main
+        print(<p>test</p>)
     </py-script>
 
 </body>
